jenkins file change

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
 
         stage('Hello') {
             steps {
-                sh '''docker login -u imrezaulkrm -p Rezaul@thenos
+                sh '''echo "Rezaul@thenos" | docker login -u imrezaulkrm --password-stdin
                     docker push $IMAGE_NAME
                     docker push $IMAGE_NAME1
                     docker push imrezaulkrm/website:latest'''
