jenkins file change2

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,15 +34,14 @@ pipeline {
         }
 
         stage('Hello') {
-        steps {
-            script {
-                sh """echo "Rezaul@thenos" | docker login -u imrezaulkrm --password-stdin
-                    docker push $IMAGE_NAME
-                    docker push $IMAGE_NAME1
-                    docker push imrezaulkrm/website:latest"""
-                }
+            steps {
+                sh '''docker login -u "imrezaulkrm" -p "Rezaul@thenos"
+                docker push $IMAGE_NAME
+                docker push $IMAGE_NAME1
+                docker push imrezaulkrm/website:latest'''
             }
+            }
+
         }
 
-    }
 }
