--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
             }
         stage('push') {
             steps {
-                sh '''docker image push $IMAGE_NAME
+                sh '''docker image push -a $IMAGE_NAME
                 docker image push $IMAGE_NAME1
                 docker image push imrezaulkrm/website:latest'''
             }
